# dental_project

./: .gitignore  README.md
DOCS/: dental_project_FRONT-PAGES-UPDATED (1).docx  dental_project_FRONT-PAGES-UPDATED.docx
backend/: pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/core/: security.py
backend/app/services/: audio.py  detection.py  report.py
backend/notebook/: dental_app.ipynb
backend/samples/: WhatsApp Audio 2026-04-15 at 12.55.36 AM.mpeg
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/api/: detectionApi.js
frontend/src/components/: AnomalyFilters.jsx  AnomalyList.jsx  AudioUpload.jsx  FileUpload.jsx  Hero.jsx  PDFReport.jsx  ReportPanel.jsx  ResultDisplay.jsx  SummaryPanel.jsx
frontend/src/pages/: DiagnosisPage.jsx
frontend/src/routes/: AppRoutes.jsx
