[project]
name = "dental-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "dill>=0.4.1",
    "dotenv>=0.9.9",
    "fastapi>=0.135.3",
    "google-genai>=1.73.0",
    "google-generativeai>=0.8.6",
    "numpy",
    "opencv-python-headless>=4.13.0.92",
    "pillow>=12.2.0",
    "python-dotenv",
    "python-multipart>=0.0.26",
    "torch==2.5.1",
    "torchvision",
    "ultralytics==8.0.6",
    "uvicorn>=0.44.0",
]
